--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "ajv": "^8.12.0",
     "exceljs": "^4.4.0",
     "ngx-cookie-service": "^17.1.0",
+    "rxdb": "^15.12.0",
     "rxjs": "~7.8.0",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
