--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,8 @@
     "@angular/router": "^17.3.0",
     "ajv": "^8.12.0",
     "exceljs": "^4.4.0",
+    "http": "^0.0.1-security",
+    "jwt-decode": "^4.0.0",
     "ngx-cookie-service": "^17.1.0",
     "rxdb": "^15.12.0",
     "rxjs": "~7.8.0",
