--- a/backend/.env
+++ b/backend/.env
@@ -8,3 +8,4 @@
 DATABASE_URL="mongodb://root:ng6hj78up98jwva345zh798k0ves5zp9kh87fgw34z@10.10.0.5:27017/kotobanosensei?authSource=admin&directConnection=true&replicaSet=rs0"
 KOTOBA="kotoba:6hbe27ns4jwva345zh798k0v47n43j2"
 JWT_SECRET="9nb78obf9nm0gvn89vn7bv87"
+JWT_REFRESH_SECRET="bf9ndaw9d7gawd8v689vn7bd44ez"
