--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,11 +5,18 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "start frontend",
             "type": "chrome",
             "request": "launch",
-            "name": "Launch Chrome against localhost",
-            "url": "http://localhost:8080",
-            "webRoot": "${workspaceFolder}"
-        }
+            "preLaunchTask": "frontend/npm: start",
+            "url": "http://localhost:4200/"
+          },
+          {
+            "type": "node",
+            "request": "launch",
+            "name": "start API",
+            "skipFiles": ["<node_internals>/**"],
+            "program": "${workspaceFolder}/backend/index.mjs"
+          }
     ]
 }
